update e soft delete nos funcionarios e nos visitantes